Fixed artist name not allowing text wrapping Bumped version to 0.1.3

--- a/scss/functions.scss
+++ b/scss/functions.scss
@@ -62,7 +62,7 @@ div.bkn-staff-grid
             text-decoration: none;
             padding: 1rem 0;
             font-size: 2rem;
-            white-space: nowrap;
+            //white-space: nowrap;
             overflow: hidden;
 
             &:link, &:visited {
